[gd_scene load_steps=5 format=3 uid="uid://uq3ixol30lfo"]

[ext_resource type="Script" path="res://Rover/rover.gd" id="1_8iqnh"]
[ext_resource type="PackedScene" uid="uid://docbfeldwp2ey" path="res://Rover/Rovee.glb" id="2_8y4km"]
[ext_resource type="PackedScene" uid="uid://ns5kge6sx1j2" path="res://Rover/Rovee_Wheel.glb" id="2_nbuni"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v05ob"]
size = Vector3(4.177, 1.913, 6.201)

[node name="rover" type="Node3D"]
script = ExtResource("1_8iqnh")

[node name="VehicleBody3D" type="VehicleBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.102175, 0.438063)
shape = SubResource("BoxShape3D_v05ob")

[node name="Rovee" parent="VehicleBody3D" instance=ExtResource("2_8y4km")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Cameras" type="Node3D" parent="VehicleBody3D"]

[node name="MastCamera" type="Camera3D" parent="VehicleBody3D/Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00699997, 2.90527, 0.0614114)

[node name="SelfieCamera" type="Camera3D" parent="VehicleBody3D/Cameras"]
transform = Transform3D(0.965926, -0.031578, 0.256885, 0, 0.992529, 0.122008, -0.258819, -0.117851, 0.95871, 2.40214, 2.3811, 4.47279)

[node name="FrontCamera" type="Camera3D" parent="VehicleBody3D/Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.137432, -3.083)

[node name="Camera3D2" type="Camera3D" parent="VehicleBody3D/Cameras"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -11.5, 0, 0)

[node name="FrontRight" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26824, -1.83336, -2.7414)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.611
suspension_travel = 0.3
suspension_stiffness = 8.0
damping_compression = 2.0
damping_relaxation = 2.0

[node name="Rovee_Wheel" parent="VehicleBody3D/FrontRight" instance=ExtResource("2_nbuni")]

[node name="BackLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23176, -1.83336, 3.2586)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.611
suspension_travel = 0.3
suspension_stiffness = 8.0
damping_compression = 2.0
damping_relaxation = 2.0

[node name="Rovee_Wheel" parent="VehicleBody3D/BackLeft" instance=ExtResource("2_nbuni")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="BackRight" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26824, -1.83336, 3.2586)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.611
suspension_travel = 0.3
suspension_stiffness = 8.0
damping_compression = 2.0
damping_relaxation = 2.0

[node name="Rovee_Wheel" parent="VehicleBody3D/BackRight" instance=ExtResource("2_nbuni")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)

[node name="MiddleLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23176, -1.83336, 0.2586)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.611
suspension_travel = 0.3
suspension_stiffness = 8.0
damping_compression = 2.0
damping_relaxation = 2.0

[node name="Rovee_Wheel" parent="VehicleBody3D/MiddleLeft" instance=ExtResource("2_nbuni")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="MiddleRight" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26824, -1.83336, 0.2586)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.611
suspension_travel = 0.3
suspension_stiffness = 8.0
damping_compression = 2.0
damping_relaxation = 2.0

[node name="Rovee_Wheel" parent="VehicleBody3D/MiddleRight" instance=ExtResource("2_nbuni")]

[node name="FrontLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23176, -1.83336, -2.7414)
use_as_traction = true
use_as_steering = true
suspension_travel = 0.3
suspension_stiffness = 8.0
damping_compression = 2.0
damping_relaxation = 2.0

[node name="Rovee_Wheel" parent="VehicleBody3D/FrontLeft" instance=ExtResource("2_nbuni")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D/BackLeft"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_7msfv")

[node name="Node" type="Node3D" parent="VehicleBody3D"]

[node name="MastCam" type="Camera3D" parent="VehicleBody3D/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54757, 0)
current = true

[node name="GroundCam" type="Camera3D" parent="VehicleBody3D/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.583525, -1.50382)

[node name="SelfieCam" type="Camera3D" parent="VehicleBody3D/Node"]
transform = Transform3D(0.91697, -0.163313, 0.363999, 0, 0.912377, 0.40935, -0.398957, -0.375362, 0.836622, 1.2489, 1.77313, 2.33939)

[node name="MastCam" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(0.417553, 0, 0, 0, 0.417553, 0, 0, 0, 0.417553, 0, 1.59396, 0.455205)
mesh = SubResource("BoxMesh_3vk7p")

[node name="Mast" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968895, 0.540178)
mesh = SubResource("CylinderMesh_7rqs3")

[node name="SelfieStick" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(0.817939, 0.451262, 0.356846, 0, 0.620272, -0.784387, -0.575305, 0.641581, 0.507345, 0.908667, 0.826541, 1.77247)
mesh = SubResource("CylinderMesh_tx6sm")

[node name="ArmBicep" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.312053, 0.950065, 0, -0.950065, 0.312053, 0, 0.116607, -2.25647)
mesh = SubResource("CylinderMesh_durbp")

[node name="ArmNotBicep" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, -0.221225, 0.975223, 0, -0.975223, -0.221225, 0, 0.220577, -4.12608)
mesh = SubResource("CylinderMesh_durbp")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
